<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data />

    <!--app:layoutFullscreen="@{true}"-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:id="@+id/coordinator_layout"
        android:layout_height="match_parent"
        tools:context="com.dudegenuine.manualbook.ui.activity.MainActivity">

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/home_nav_feature"/>

        <fragment
            android:id="@+id/bottom_sheet_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.dudegenuine.manualbook.ui.fragment.sheet.BottomSheetFragment"/>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="end"
            app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
            app:fabCradleMargin="@dimen/bottom_app_bar_fab_cradle_margin"
            app:hideOnScroll="true">

            <!--android:foreground="@drawable/bottom_app_bar_title_foreground"-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/bottom_app_bar_content_container"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/min_touch_target_size"
                android:layout_marginVertical="@dimen/grid_0_5"
                android:paddingHorizontal="@dimen/grid_0_5"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/app_bar_clickable_foreground">

                <ImageView
                    android:id="@+id/bottom_app_bar_chevron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bottom_app_bar_chevron_content_desc"
                    android:layout_gravity="center_vertical"
                    app:tint="?attr/colorOnPrimarySurface"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24" />

                <TextView
                    android:id="@+id/bottom_app_bar_title"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/grid_1"
                    android:text="@string/app_name"
                    android:textColor="?attr/colorControlNormal"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--<ImageView
                    android:id="@+id/bottom_app_bar_logo"
                    android:layout_width="@dimen/bottom_app_bar_logo_size"
                    android:layout_height="@dimen/bottom_app_bar_logo_size"
                    android:layout_marginStart="@dimen/grid_1"
                    android:contentDescription="@string/bottom_app_bar_logo_content_desc"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24" />-->
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/bottom_app_bar"
            android:contentDescription="@string/menu_item_search"
            app:srcCompat="@drawable/ic_baseline_search_24" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>