<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable name="drawable" type="android.graphics.drawable.Drawable" />
        <variable name="subject" type="String" />
        <variable name="sender" type="String" />
        <variable name="highlight" type="String" />
        <variable name="body" type="String" />
        <variable name="recipient" type="String" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/grid_0_5"
        android:paddingTop="@dimen/grid_1"
        android:clipToPadding="false"
        android:background="?android:colorBackground">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/detail_card_view"
            android:transitionGroup="true"
            android:transitionName="@string/transition_name_dest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/menu_item_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/grid_2"
                android:paddingTop="@dimen/grid_3"
                android:paddingBottom="@dimen/bottom_app_bar_height"
                app:paddingBottomSystemWindowInsets="true">

                <TextView
                    android:id="@+id/subject_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:layout_marginEnd="@dimen/grid_1"
                    app:layout_constraintEnd_toStartOf="@+id/navigate_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@{subject}"
                    android:textAppearance="?attr/textAppearanceHeadline3"
                    tools:text="High school reunion" />

                <!--android:onClick="@{viewModel::onBackSelected}"-->
                <ImageButton
                    android:id="@+id/navigate_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/grid_2"
                    app:layout_constraintEnd_toEndOf="@+id/sender_profile_image_view"
                    app:layout_constraintStart_toStartOf="@+id/sender_profile_image_view"
                    app:layout_constraintTop_toTopOf="@+id/subject_text_view"
                    android:src="@drawable/ic_baseline_expand_more_24"
                    android:alpha="?attr/emphasisMediumAlpha"
                    android:background="?attr/actionBarItemBackground"
                    android:contentDescription="@string/navigate_back_icon_content_desc" />

                <TextView
                    android:id="@+id/sender_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:layout_marginEnd="@dimen/grid_1"
                    app:layout_constraintEnd_toStartOf="@+id/sender_profile_image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subject_text_view"
                    android:text="@{sender}"
                    android:textAppearance="?attr/textAppearanceBody2"
                    tools:text="Ali Connors -- 12m" />

                <!--email_recipient_to(email.recipientsPreview)-->
                <TextView
                    android:id="@+id/recipient_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_0_25"
                    android:layout_marginEnd="@dimen/grid_1"
                    app:layout_constraintEnd_toStartOf="@+id/sender_profile_image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sender_text_view"
                    tools:text="Prophet Muhammad SAW"
                    android:text="@{recipient}"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_on_surface_emphasis_medium" />

                <!--app:glideCircularCrop="rue}"
                    app:glideSrc="mail.sender.avatar}"-->
                <ImageView
                    android:id="@+id/sender_profile_image_view"
                    android:layout_width="@dimen/email_sender_profile_image_size"
                    android:layout_height="@dimen/email_sender_profile_image_size"
                    android:contentDescription="@string/email_sender_profile_content_desc"
                    android:scaleType="centerCrop"
                    android:src="@{drawable}"
                    app:layout_constraintTop_toTopOf="@id/sender_text_view"
                    app:layout_constraintBottom_toBottomOf="@+id/recipient_text_view"
                    app:layout_constraintEnd_toEndOf="parent"  />
                <TextView
                    android:id="@+id/pre_body_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sender_profile_image_view"
                    tools:text="@tools:sample/lorem"
                    android:textDirection="rtl"
                    android:text="@{highlight}"
                    android:visibility="@{highlight != null ? View.VISIBLE : View.GONE}"
                    android:textAppearance="@style/TextAppearance.ManualBook.Headline4"/>
                <TextView
                    android:id="@+id/body_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pre_body_text_view"
                    android:text="@{body}"
                    tools:text="@tools:sample/lorem/random"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <!--<androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/attachment_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/body_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:overScrollMode="never" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>
</layout>